--- a/Docker/plusFlix/backend/templates/admin/base.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/base.html.twig
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Panel Admina</title>
-        <link rel="stylesheet" href="styles.css">
+
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('styles/admin.css') }}">
+        {% endblock %}
     </head>
     <body>
         <nav class="admin-nav">
