--- a/Docker/plusFlix/backend/templates/admin/categories.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/categories.html.twig
@@ -1,5 +1,10 @@
 {% extends "admin/base.html.twig" %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('styles/admin_categories.css') }}">
+{% endblock %}
+
 {% block body %}
 
 <style>
@@ -29,44 +34,46 @@
     }
 </style>
 
-<h1>Kategorie</h1>
+<div id="main_content">
+    <h1>Kategorie</h1>
 
-<a href="#" id="addCategoryBtn">+ Dodaj kategorię</a>
+    <a href="#" id="addCategoryBtn">+ Dodaj kategorię</a>
 
-<input type="text">
+    <input type="text">
 
-<div class="admin-categories-container">
+    <div class="admin-categories-container">
 
-    <table class="admin-table">
-        <thead>
-            <tr>
-                <th>Nazwa kategorii</th>
-                <th>Liczba powiązanych dzieł</th>
-                <th>Akcje</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for category in categories %}
+        <table class="admin-table">
+            <thead>
                 <tr>
-                    <td>{{ category.genre }}</td>
-                    <td>{{ category.item_count}}</td>
-                    <td>
-                        <a href="#" class="editCategoryBtn"
-                           data-id="{{ category.cat_ID }}"
-                           data-name="{{ category.genre }}">
-                           Edytuj
-                        </a>
-                        <a href="#" 
-                            class="deleteCategoryLink" 
-                            data-id="{{ category.cat_ID }}">
-                            Usuń
-                        </a>
-                    </td>
+                    <th>Nazwa kategorii</th>
+                    <th>Liczba powiązanych dzieł</th>
+                    <th>Akcje</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for category in categories %}
+                    <tr>
+                        <td>{{ category.genre }}</td>
+                        <td>{{ category.item_count}}</td>
+                        <td>
+                            <a href="#" class="editCategoryBtn"
+                               data-id="{{ category.cat_ID }}"
+                               data-name="{{ category.genre }}">
+                               Edytuj
+                            </a>
+                            <a href="#"
+                                class="deleteCategoryLink"
+                                data-id="{{ category.cat_ID }}">
+                                Usuń
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
 
+    </div>
 </div>
 
 <div id="categoryModal" class="modal">
