--- a/Docker/plusFlix/backend/templates/admin/base.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Panel Admina</title>
-        <link rel="stylesheet" href="styles.css">
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         <nav class="admin-nav">
