wstrzykiwanie danych do strony dziela, podlaczenie stylow, dzialajace:tagi, kategorie oraz streamingi

--- a/Docker/plusFlix/backend/templates/admin/base.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Panel Admina</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}<link rel="stylesheet" href="{{ asset('styles/admin.css') }}">{% endblock %}
     </head>
     <body>
         <nav class="admin-nav">
