--- a/Docker/plusFlix/backend/templates/admin/streamings.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/streamings.html.twig
@@ -29,6 +29,7 @@
     }
 </style>
 
+    <div id="main_content">
 <h1>Platformy streamingowe</h1>
 
 <a href="#" id="addStreamingBtn">+ Dodaj platformę</a>
@@ -68,6 +69,7 @@
     </table>
 
 </div>
+    </div>
 
 <div id="streamingModal" class="modal">
     <div class="modal-content">
