--- a/Docker/plusFlix/backend/public/styles/public_item.css
+++ b/Docker/plusFlix/backend/public/styles/public_item.css
@@ -7,10 +7,9 @@
     padding: 2em;
 }
 
-#itemImage {
-    background: #2e3136;
+.bigPoster {
     width: 300px;
-    height: 500px;
+    height: 420px;
 }
 
 #itemTags {
@@ -19,13 +18,14 @@
 }
 
 .tag {
-    padding: 0.3em 0.5em;
-    background: #0f5f94;
+    padding: 0.3em 0.8em;
+    background-color: rgb(47, 47, 47);
+    color: #ebf1f1;
     border-radius: 1em;
 }
 
 #itemScore {
-    background: #2e3136;
+    background-color: rgb(47, 47, 47);
     width: 300px;
     height: 150px;
 }
@@ -37,15 +37,14 @@
 
 .similarItem {
     margin: 0.5em;
-    background: #2e3136;
     width: 100px;
     height: 150px;
 }
 
 #streamingsContainer {
-    background: #2e3136;
+    background-color: rgb(47, 47, 47);
     display: flex;
-    padding: 1em 1.5em;
+    padding: 1em 1em;
     border-radius: 1em;
     /*width: 300px;*/
     /*height: 150px;*/
@@ -61,4 +60,6 @@
 
     justify-content: center;
     align-items: center;
+
+    margin: 0 1em;
 }
