--- a/Docker/plusFlix/backend/templates/public/item.html.twig
+++ b/Docker/plusFlix/backend/templates/public/item.html.twig
@@ -1,7 +1,7 @@
-{% extends "public/base.html.twig" %}
+{% extends "search/base.html.twig" %}
 
 {% block title %}
-    <title>Item Page</title>
+    Item Page
 {% endblock %}
 
 
@@ -13,32 +13,47 @@
 {% block body %}
     <div id="main_content">
         <div id="leftColumn">
-            <div id="itemImage">image</div>
+            <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="bigPoster">
             <div id="itemTags">
-                <div class="tag">tag</div>
+                {% for tag in item.tags %}
+                    <div class="tag">
+                        {{ tag.tagName }}
+                    </div>
+                {% endfor %}
             </div>
         </div>
 
         <div id="middleColumn">
-            <h1>Title</h1>
-
-            <p>Film | rok</p>
+            <h1>{{ item.name }}</h1>
+            <p>
+                {{ item.type == 1 ? "Film" : "Serial" }}
+                |
+                {{ item.year }}
+            </p><br>
 
             <h2>Reżyser</h2>
-            <p>Andrew Adamson</p>
+            <p> {{ item.director }} </p><br>
 
             <h2>Kategorie</h2>
-            <p>Komedia, dla dzieci</p>
+            <p>
+                {% for category in item.categories %}
+                    {{ category.genre }},
+                {% endfor %}
+            </p><br>
 
             <h2>Opis</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget lorem venenatis, accumsan odio ac, fermentum ligula. Phasellus pulvinar aliquet nisi, eget ultrices nunc laoreet id. Nullam finibus mi ultricies, euismod ligula gravida, tincidunt ante. Donec tempus metus et eros vehicula, sit amet dictum purus dictum. Duis porta bibendum velit consectetur elementum. Donec placerat turpis feugiat, faucibus odio tincidunt, aliquet enim. Proin nec diam dignissim, eleifend lacus non, molestie eros. Etiam ac massa tristique, semper elit eu, aliquet erat. Maecenas auctor felis justo, vitae dictum nibh suscipit ut. In id lacinia justo. Donec in molestie lectus. Vivamus eu lacus id eros cursus accumsan. Nullam nibh massa, aliquet id aliquet non, posuere sed enim. Sed augue justo, blandit a sem a, tempus sollicitudin mi. Phasellus non ante vel justo malesuada tempor id ultricies neque. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget lorem venenatis, accumsan odio ac, fermentum ligula. Phasellus pulvinar aliquet nisi, eget ultrices nunc laoreet id. Nullam finibus mi ultricies, euismod ligula gravida, tincidunt ante. Donec tempus metus et eros vehicula, sit amet dictum purus dictum. Duis porta bibendum velit consectetur elementum. Donec placerat turpis feugiat, faucibus odio tincidunt, aliquet enim. Proin nec diam dignissim, eleifend lacus non, molestie eros. Etiam ac massa tristique, semper elit eu, aliquet erat. Maecenas auctor felis justo, vitae dictum nibh suscipit ut. In id lacinia justo. Donec in molestie lectus. Vivamus eu lacus id eros cursus accumsan. Nullam nibh massa, aliquet id aliquet non, posuere sed enim. Sed augue justo, blandit a sem a, tempus sollicitudin mi. Phasellus non ante vel justo malesuada tempor id ultricies neque. </p><br>
 
             <button type="button">Dodaj do ulubionych</button>
 
             <h2>Gdzie obejrzeć</h2>
 
             <div id="streamingsContainer">
-                <div class="streaming">N</div>
+                {% for streaming in item.streamings %}
+                <div class="streaming">
+                        {{ streaming.platformName }}
+                </div>
+                {% endfor %}
             </div>
         </div>
 
@@ -50,10 +65,10 @@
 
             <h2>Podobne:</h2>
             <div id="similarItemsContainer">
-                <div class="similarItem"></div>
-                <div class="similarItem"></div>
-                <div class="similarItem"></div>
-                <div class="similarItem"></div>
+                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
+                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
+                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
+                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
             </div>
         </div>
     </div>
