--- a/Docker/plusFlix/backend/templates/search/results.html.twig
+++ b/Docker/plusFlix/backend/templates/search/results.html.twig
@@ -1,5 +1,10 @@
 {% extends 'search/base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="/css/search_results.css">
+{% endblock %}
+
 {% block title %}Wyniki wyszukiwania{% endblock %}
 
 {% block body %}
