--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -27,7 +27,7 @@
 
     <div class="nav-right">
         <a href="/popularne">Popularne</a>
-        <a href="/ulubione">Ulubione</a>
+        <a href="/favorites">Ulubione</a>
         <button class="theme-toggle">ciemno/jasno</button>
     </div>
 </nav>
