--- a/Docker/plusFlix/backend/public/styles/public_item.css
+++ b/Docker/plusFlix/backend/public/styles/public_item.css
@@ -7,9 +7,10 @@
     padding: 2em;
 }
 
-.bigPoster {
+.bigPoster, .bigPoster img {
     width: 300px;
     height: 420px;
+    position: relative;
 }
 
 #itemTags {
@@ -35,11 +36,11 @@
     grid-template-columns: 1fr 1fr;
 }
 
-.similarItem {
-    margin: 0.5em;
-    width: 100px;
-    height: 150px;
-}
+/*.similarItem {*/
+/*    margin: 0.5em;*/
+/*    width: 100px;*/
+/*    height: 150px;*/
+/*}*/
 
 #streamingsContainer {
     background-color: rgb(47, 47, 47);
@@ -62,4 +63,94 @@
     align-items: center;
 
     margin: 0 1em;
+}
+.streaming img{
+    border-radius: 5em;
+    width: 5em;
+    height: 5em;
+}
+
+.fav-btn {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    background: rgba(255,255,255,0.8);
+    border: none;
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    font-size: 16px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.fav-btn:hover {
+    background-color: gold;
+}
+
+.fav-btn.active {
+    background: gold;
+}
+
+.result-card {
+    background: #fff;
+    border-radius: 8px;
+    padding-bottom: 0.5rem;
+    border: 1px solid #ddd;
+    overflow: hidden;
+    position: relative;
+    color: inherit;
+
+    margin: 0.5em;
+    width: 180px;
+    height: 270px;
+}
+
+.result-card img {
+    width: 180px;
+    height: 270px;
+}
+
+.poster-wrapper {
+    width: 180px;
+    height: 210px;
+}
+
+.result-card a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.poster {
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+}
+
+.streaming-icons {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.streaming-icons img {
+    width: 30px;
+    height: 30px;
+}
+
+.info {
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.title {
+    font-size: 1rem;
+    margin: 0.2rem 0;
+}
+
+.meta {
+    font-size: 0.9rem;
+    color: #666;
 }
