--- a/Docker/plusFlix/backend/templates/public/item.html.twig
+++ b/Docker/plusFlix/backend/templates/public/item.html.twig
@@ -13,7 +13,11 @@
 {% block body %}
     <div id="main_content">
         <div id="leftColumn">
-            <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="bigPoster">
+            <div class="bigPoster">
+                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg">
+                <button class="fav-btn" data-id="{{ item.id }}">★</button>
+            </div>
+
             <div id="itemTags">
                 {% for tag in item.tags %}
                     <div class="tag">
@@ -44,8 +48,6 @@
             <h2>Opis</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget lorem venenatis, accumsan odio ac, fermentum ligula. Phasellus pulvinar aliquet nisi, eget ultrices nunc laoreet id. Nullam finibus mi ultricies, euismod ligula gravida, tincidunt ante. Donec tempus metus et eros vehicula, sit amet dictum purus dictum. Duis porta bibendum velit consectetur elementum. Donec placerat turpis feugiat, faucibus odio tincidunt, aliquet enim. Proin nec diam dignissim, eleifend lacus non, molestie eros. Etiam ac massa tristique, semper elit eu, aliquet erat. Maecenas auctor felis justo, vitae dictum nibh suscipit ut. In id lacinia justo. Donec in molestie lectus. Vivamus eu lacus id eros cursus accumsan. Nullam nibh massa, aliquet id aliquet non, posuere sed enim. Sed augue justo, blandit a sem a, tempus sollicitudin mi. Phasellus non ante vel justo malesuada tempor id ultricies neque. </p><br>
 
-            <button type="button">Dodaj do ulubionych</button>
-
             <h2>Gdzie obejrzeć</h2>
 
             <div id="streamingsContainer">
@@ -65,12 +67,93 @@
 
             <h2>Podobne:</h2>
             <div id="similarItemsContainer">
-                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
-                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
-                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
-                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="similarItem">
+                {% for similar in similars %}
+                    <div class="result-card">
+                        <button class="fav-btn" data-id="{{ similar.id }}">★</button>
+
+                        <a href="{{ path('item_detail', {'id': similar.id}) }}">
+                            <div class="poster-wrapper">
+                                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="poster">
+
+
+                                <div class="streaming-icons">
+                                    {% for streaming in similar.streamings %}
+                                        <img src="https://fwcdn.pl/nph/867323/2025/63747.7.jpg">
+                                    {% endfor %}
+                                </div>
+
+                            </div>
+
+                            <div class="info">
+                                <h4 class="title">{{ similar.name }}</h4>
+                                <p class="meta">
+                                    {% if similar.type == 1 %}
+                                        Film
+                                    {% elseif similar.type == 2 %}
+                                        Serial
+                                    {% else %}
+                                        Inne
+                                    {% endif %}
+                                    | {{ similar.year }}
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
 
+{% endblock %}
+
+
+{% block javascript %}
+    <script src="{{ asset('js/favorites.js') }}"></script>
+    <script>
+        const streamingsLinks = document.querySelectorAll(".streaming");
+
+
+        streamingsLinks.forEach(btn => {
+            const text = btn.innerHTML.trim(); console.log(text);
+
+            const link = document.createElement('a');
+            const img = document.createElement('img');
+            link.classList.add('streaming');
+
+            if (text === "Netflix") {
+                link.href = 'https://www.netflix.com';
+                img.src = "https://images.ctfassets.net/4cd45et68cgf/Rx83JoRDMkYNlMC9MKzcB/2b14d5a59fc3937afd3f03191e19502d/Netflix-Symbol.png?w=700&h=456";
+                img.alt = "Netflix";
+            }
+            else if (text === "HBO Max") {
+                link.href = 'https://www.hbomax.com';
+                img.src = "https://fwcdn.pl/nph/867323/2025/63747.7.jpg";
+                img.alt = "HBO Max";
+            }
+            else if (text === "Disney+") {
+                link.href = 'https://www.disneyplus.com';
+                img.src = "https://platform.theverge.com/wp-content/uploads/sites/2/chorus/uploads/chorus_asset/file/25357066/Disney__Logo_March_2024.png?quality=90&strip=all&crop=7.8125%2C0%2C84.375%2C100&w=2400";
+                img.alt = "Disney+";
+            }
+            else if (text === "Amazon Prime Video") {
+                link.href = 'https://www.primevideo.com/';
+                img.src = "https://upload.wikimedia.org/wikipedia/commons/c/ca/Amazon_Prime_Video_logo_%282024%29.svg";
+                img.alt = "Amazon Prime Video";
+            }
+            else if (text === "Apple TV+") {
+                link.href = 'https://tv.apple.com';
+                img.src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs5Uv6cx7KcDlTFANEqZFj-HK0HlwpIu7Nhg&s";
+                img.alt = "Apple TV+";
+            }
+            else if (text === "Hulu") {
+                link.href = 'https://www.netflix.com';
+                img.src = "https://upload.wikimedia.org/wikipedia/commons/f/f9/Hulu_logo_%282018%29.svg";
+                img.alt = "Hulu";
+            }
+
+
+            link.append(img);
+            btn.replaceWith(link);
+        });
+    </script>
 {% endblock %}
