--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -36,6 +36,7 @@
 
 </body>
 
+{% block javascript %}{% endblock %}
 <script>
     let isDark = false;
     const themeToggle = document.getElementById("themeToggle");
