--- a/Docker/plusFlix/backend/templates/admin/base.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/base.html.twig
@@ -3,16 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Panel Admina</title>
-        {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="{{ asset('css/admin/admin.base.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/admin/admin.ratings.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/admin/admin.categories.css') }}">
+        {# Tu dodawać dla pozostałych opcji admina #}
     </head>
     <body>
-        <nav class="admin-nav">
-            <a href="/admin/streamings">Streamingi</a>
-            <a href="/admin/items">Seriale i Filmy</a>
-            <a href="/admin/categories">Kategorie</a>
-            <a href="/admin/tags">Tagi</a>
-            <a href="/admin/ratings">Oceny</a>
-        </nav>
-        {% block body %}{% endblock %}
+        <div class="admin-layout">
+            <div class="admin-base"> 
+                <aside class="admin-nav">
+                    <ul>
+                        <li><a href="/admin/streamings">Streamingi</a></li>
+                        <li><a href="/admin/items">Seriale i Filmy</a></li>
+                        <li><a href="/admin/categories">Kategorie</a></li>
+                        <li><a href="/admin/tags">Tagi</a></li>
+                        <li><a href="/admin/ratings">Oceny</a></li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="admin-extended">
+                {% block body %}
+                    <h1>Witaj Admin!</h1>
+                {% endblock %}
+            </div>
+        </div>
     </body>
 </html>
