--- a/Docker/plusFlix/backend/templates/public/item.html.twig
+++ b/Docker/plusFlix/backend/templates/public/item.html.twig
@@ -15,7 +15,6 @@
         <div id="leftColumn">
             <div class="bigPoster">
                 <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg">
-                <button class="fav-btn" data-id="{{ item.id }}">★</button>
             </div>
 
             <div id="itemTags">
@@ -41,12 +40,15 @@
             <h2>Kategorie</h2>
             <p>
                 {% for category in item.categories %}
-                    {{ category.genre }},
+                    {{ category.genre }}
+                    {% if not loop.last %},{% endif %}
                 {% endfor %}
             </p><br>
 
             <h2>Opis</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget lorem venenatis, accumsan odio ac, fermentum ligula. Phasellus pulvinar aliquet nisi, eget ultrices nunc laoreet id. Nullam finibus mi ultricies, euismod ligula gravida, tincidunt ante. Donec tempus metus et eros vehicula, sit amet dictum purus dictum. Duis porta bibendum velit consectetur elementum. Donec placerat turpis feugiat, faucibus odio tincidunt, aliquet enim. Proin nec diam dignissim, eleifend lacus non, molestie eros. Etiam ac massa tristique, semper elit eu, aliquet erat. Maecenas auctor felis justo, vitae dictum nibh suscipit ut. In id lacinia justo. Donec in molestie lectus. Vivamus eu lacus id eros cursus accumsan. Nullam nibh massa, aliquet id aliquet non, posuere sed enim. Sed augue justo, blandit a sem a, tempus sollicitudin mi. Phasellus non ante vel justo malesuada tempor id ultricies neque. </p><br>
+
+            <button id="add-to-favorites" class="fav-btn" data-id="{{ item.id }}">⊕ Dodaj do ulubionych</button>
 
             <h2>Gdzie obejrzeć</h2>
 
@@ -57,12 +59,41 @@
                 </div>
                 {% endfor %}
             </div>
+
+            <div id="ratingSection">
+                <h2>Komentarze</h2>
+
+                {% for rating in item.ratings %}
+                    <div class="rating">
+                        <div id="score-container-small">
+                            <span class="star-symbol-rating" >{% if 1 <= rating.rating %}&starf;{% else %}&star;{% endif %}</span>
+                            <span class="star-symbol-rating" >{% if 2 <= rating.rating %}&starf;{% else %}&star;{% endif %}</span>
+                            <span class="star-symbol-rating" >{% if 3 <= rating.rating %}&starf;{% else %}&star;{% endif %}</span>
+                            <span class="star-symbol-rating" >{% if 4 <= rating.rating %}&starf;{% else %}&star;{% endif %}</span>
+                            <span class="star-symbol-rating" >{% if 5 <= rating.rating %}&starf;{% else %}&star;{% endif %}</span>
+                        </div>
+                        <p>{{ rating.comment }}</p>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
 
         <div id="rightColumn">
             <h2>Już obejrzane?</h2>
             <div id="itemScore">
-
+                <form id='rating-form' method="POST" action="{{ path('rating_add') }}">
+                    <div id="score-container">
+                        <span class="star-symbol" data-value="1">&star;</span>
+                        <span class="star-symbol" data-value="2">&star;</span>
+                        <span class="star-symbol" data-value="3">&star;</span>
+                        <span class="star-symbol" data-value="4">&star;</span>
+                        <span class="star-symbol" data-value="5">&star;</span>
+                    </div>
+                    <input id="commentInput" type="text" name="comment" placeholder="comment...">
+                    <input type="hidden" id="scoreInput" name="rating">
+                    <input type="hidden" id="itemId" name="itemId" value="{{ item.id }}">
+                    <button type="submit">Dodaj</button>
+                </form>
             </div>
 
             <h2>Podobne:</h2>
@@ -110,6 +141,50 @@
 {% block javascript %}
     <script src="{{ asset('js/favorites.js') }}"></script>
     <script>
+        // Rating
+        const ratingForm = document.querySelector('#rating-form');
+        const stars = document.querySelectorAll('.star-symbol');
+        const scoreInput = document.getElementById('scoreInput');
+
+        ratingForm.addEventListener('submit', e => {
+            e.preventDefault(); // prevent normal page reload
+
+            const formData = new FormData(ratingForm);
+
+            fetch(ratingForm.action, {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        console.log(`${'Rating added'}: ID`, data.id);
+                        window.location.reload();
+                    } else {
+                        alert('Something went wrong');
+                    }
+                })
+                .catch(err => console.error(err));
+        });
+
+        stars.forEach(star => {
+            star.addEventListener('click', () => {
+                const value = star.dataset.value;
+
+                // Save score
+                scoreInput.value = value;
+
+                // Update UI
+                stars.forEach(s => {
+                    if(s.dataset.value <= value)
+                        s.innerHTML = '&starf;';
+                    else
+                        s.innerHTML = '&star;';
+                });
+            });
+        });
+
+        // Something
         const streamingsLinks = document.querySelectorAll(".streaming");
 
 
