--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -26,7 +26,7 @@
     </div>
 
     <div class="nav-right">
-        <a href="/popularne">Popularne</a>
+        <a href="/search">Wszystkie</a>
         <a href="/favorites">Ulubione</a>
         <button id="themeToggle" class="theme-toggle"></button>
     </div>
