fixed broken twig

--- a/Docker/plusFlix/backend/templates/admin/base.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/base.html.twig
@@ -26,6 +26,11 @@
                     </ul>
                 </aside>
             </div>
+            <div class="admin-extended">
+                {% block body %}
+                    <h1>Witaj Admin!</h1>
+                {% endblock %}
+            </div>
         </div>
     </body>
 </html>
