--- a/Docker/plusFlix/backend/public/css/navbar.css
+++ b/Docker/plusFlix/backend/public/css/navbar.css
@@ -26,7 +26,7 @@
 .nav-left .logo {
     font-size: 25px;
     font-weight: bold;
-    color: #fcf64c;
+    color: gold;
     text-decoration: none;
     font-family: "Impact", sans-serif;
     letter-spacing: 0.08em;
