--- a/Docker/plusFlix/backend/public/css/search_results.css
+++ b/Docker/plusFlix/backend/public/css/search_results.css
@@ -18,6 +18,7 @@ body {
     width: 240px;
     background: #939393;
     border: 1px solid #ddd;
+    border-radius: 12px;
     padding: 1rem;
     height: fit-content;
     position: sticky;
@@ -35,10 +36,51 @@ body {
     margin-bottom: 1rem;
 }
 
+.filter-group button {
+    padding: 0.6rem 1rem;
+    margin-bottom: 1rem;
+    max-width: 8rem;
+    font-size: 0.95rem;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    background: #555;
+    color: #fff;
+    transition: background 0.2s;
+}
+
+.filter-group button:hover {
+    background: gold;
+}
+
 .filter-group select {
-    padding: 0.4rem;
-    border-radius: 4px;
+    padding: 0.5rem;
+    border-radius: 6px;
     border: 1px solid #ccc;
+}
+
+.filter-group label {
+    margin-bottom: 0.5rem;
+}
+
+.query-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem; 
+}
+
+#clear-query-btn {
+    border: none;
+    width: 26px;
+    height: 26px;
+    color: black;
+    font-weight: bold;
+    font-size: large;
+    cursor: pointer;
+    display: flex;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
 }
 
 .results-main {
@@ -68,6 +110,40 @@ body {
     padding: 0.4rem;
     border-radius: 4px;
     border: 1px solid #ccc;
+}
+
+.dropdown-checkbox { 
+    position: relative; 
+}
+
+.dropdown-checkbox button {
+    width: 100%; 
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    padding: 0.6rem 1rem;
+    border-radius: 5px;
+    border: none;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 8px;
+    z-index: 10;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+}
+
+.dropdown-checkbox:hover .dropdown-content {
+    display: block;
+}
+
+.checkbox-option {
+    display: block;
+    margin-bottom: 4px;
 }
 
 .results-grid {
