--- a/Docker/plusFlix/backend/templates/home/index.html.twig
+++ b/Docker/plusFlix/backend/templates/home/index.html.twig
@@ -1,4 +1,37 @@
 <link rel="stylesheet" href="/css/home.css">
+{% set STREAMING_DATA_BY_ID = {
+    1: {
+        name: "Netflix",
+        logo: "https://images.ctfassets.net/4cd45et68cgf/Rx83JoRDMkYNlMC9MKzcB/2b14d5a59fc3937afd3f03191e19502d/Netflix-Symbol.png?w=700&h=456",
+        link: "https://www.netflix.com"
+    },
+    2: {
+        name: "HBO Max",
+        logo: "https://fwcdn.pl/nph/867323/2025/63747.7.jpg",
+        link: "https://www.hbomax.com"
+    },
+    3: {
+        name: "Disney+",
+        logo: "https://platform.theverge.com/wp-content/uploads/sites/2/chorus/uploads/chorus_asset/file/25357066/Disney__Logo_March_2024.png?quality=90&strip=all&crop=7.8125%2C0%2C84.375%2C100&w=2400",
+        link: "https://www.disneyplus.com"
+    },
+    4: {
+        name: "Amazon Prime Video",
+        logo: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Amazon_Prime_Video_logo_%282024%29.svg/1200px-Amazon_Prime_Video_logo_%282024%29.svg.png",
+        link: "https://www.primevideo.com"
+    },
+    5: {
+        name: "Apple TV+",
+        logo: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs5Uv6cx7KcDlTFANEqZFj-HK0HlwpIu7Nhg&s",
+        link: "https://tv.apple.com"
+    },
+    6: {
+        name: "Hulu",
+        logo: "https://store-images.s-microsoft.com/image/apps.60756.9007199266246590.a8642808-8fcd-48e6-805e-aede1f148787.c1baaaf0-7b9d-4e6e-9661-56452a1f7ddd",
+        link: "https://www.hulu.com"
+    }
+} %}
+
 
 <div class="logo-fixed">Logo</div>
 
@@ -10,39 +43,32 @@
         Sprawdź, gdzie możesz obejrzeć najpopularniejsze i nadchodzące tytuły:
     </p>
 
-    <form action="/search" method="GET" class="nav-search">
+    <form id="home-search-form" action="{{ path('search_results') }}" method="GET" class="nav-search" data-search-url="{{ path('search_results') }}"
+    data-suggestions-url="{{ path('search_suggestions') }}">
         <div class="search-bar">
-            <input name="q" type="text" placeholder="Szukaj...">
+            <input id="home-search-input" name="q" type="text" placeholder="Szukaj...">
             <button class="search-btn">
                 <img src="https://cdn-icons-png.flaticon.com/256/2866/2866321.png" alt="search">
             </button>
+            <div id="suggestions" class="suggestions"></div>
         </div>
     </form>
 
-
-    <div id="suggestions" class="suggestions"></div>
 </div>
 
 <div class="streaming-logos-section">
     <h2>Serwisy streamingowe na PlusFlix:</h2>
     <div class="logos">
-        <a href="https://www.netflix.com" class="logo-circle">
-            <img src="https://images.ctfassets.net/4cd45et68cgf/Rx83JoRDMkYNlMC9MKzcB/2b14d5a59fc3937afd3f03191e19502d/Netflix-Symbol.png?w=700&h=456" alt="Netflix">
-        </a>
-        <a href="https://www.hbomax.com" class="logo-circle">
-            <img src="https://fwcdn.pl/nph/867323/2025/63747.7.jpg" alt="HBO">
-        </a>
-        <a href="https://www.primevideo.com" class="logo-circle">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Amazon_Prime_Video_logo_%282024%29.svg/1200px-Amazon_Prime_Video_logo_%282024%29.svg.png" alt="Prime Video">
-        </a>
-        <a href="https://www.disneyplus.com" class="logo-circle">
-            <img src="https://platform.theverge.com/wp-content/uploads/sites/2/chorus/uploads/chorus_asset/file/25357066/Disney__Logo_March_2024.png?quality=90&strip=all&crop=7.8125%2C0%2C84.375%2C100&w=2400" alt="Disney+">
-        </a>
-        <a href="https://www.skyshowtime.com/pl" class="logo-circle">
-            <img src="https://play-lh.googleusercontent.com/70N00IvZzmPe6O2gE8Eq9uU1oLYdtlrBHIy9jTd99egSOrDxNRx-D1XGuL4StgxaOg" alt="SkyShowtime">
-        </a>
-        <a href="https://tv.apple.com" class="logo-circle">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQs5Uv6cx7KcDlTFANEqZFj-HK0HlwpIu7Nhg&s" alt="Apple TV+">
-        </a>
+        {% for s in STREAMING_DATA_BY_ID %}
+            {% include 'components/streaming_logo.html.twig' with {
+                name: s.name,
+                logo: s.logo,
+                link: s.link
+            } %}
+        {% endfor %}
     </div>
 </div>
+
+{% block javascript %}
+    <script src="{{ asset('js/search_suggestions.js') }}"></script>
+{% endblock %}
